# youbet-solana

./: Anchor.toml  README.md
programs/youbet-solana-program/: Cargo.toml
programs/youbet-solana-program/src/: error.rs  lib.rs
programs/youbet-solana-program/src/instructions/: claim_reward.rs  confirm_task.rs  create_project.rs  create_task.rs  donate_to_project.rs  initialize.rs  link_wallet.rs  mod.rs
programs/youbet-solana-program/src/states/: admin_config.rs  donate_pool.rs  github.rs  mod.rs  project.rs  reward.rs  task.rs  wallet.rs
tests/: youbet-solana-program.ts
